--- a/index.css
+++ b/index.css
@@ -4,10 +4,19 @@
 }
 
 main {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
+}
+
+.bar {
+    fill: blue;
+}
+
+.bar:hover {
+    fill: orange;
 }
