--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
@@ -10,17 +15,27 @@ main {
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: #2288af;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F5E8E3;
+    box-shadow: 2px 2px 2px 2px black;
+    padding: 10px;
 }
 
 #overlay {
     position: relative;
 }
 
-
 .bar {
-    fill: blue;
+    fill: #2241af
 }
 
 .bar:hover {
-    fill: orange;
+    fill: #42af22
 }
